--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,10 +1,11 @@
 <div class="container mx-auto">
-    <app-header/>
+    <app-header [cart]="cart()"/>
+    <!-- <h3 class="text-3xl">{{cart().length}}</h3> -->
     <div class="grid grid-cols-4 gap-8 mt-5">
         <app-product 
         *ngFor="let product of products()"
         [product] = "product"
-        (addToCart)="fromChild($event)"/>
+        (addToCart)="addToCart($event)"/>
     
     </div>
 
